[tool.poetry]
name = "vngrok"
version = "1.4.0"
description = "This project aims to create one network revser load balancer you allow you to expose your local server to the internet using one external machine like a vps "
authors = ["Vortex5Root"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.8.2"
pexpect = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
